--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -9,8 +9,10 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the stack
-      run: docker-compose up -d
+    - uses: actions/checkout@v4
+    - name: Run docker compose
+      uses: hoverkraft-tech/compose-action@v2.0.1
+      with:
+        compose-file: "../docker-compose.yml"
     - name: Run Tests
       run: docker exec -it money-sync-api-app pytest tests/__init__.py
