change context on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ name: money-sync-api
 services:
   app:
     build:
-      context: ..
+      context: .
       dockerfile: ./Dockerfile
 
     volumes:
